...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album: Harry Potter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tH3-2R-I2M">
                                                    <rect key="frame" x="16" y="11" width="152" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Leaving Hogwarts" id="4Kp-ev-eG1"/>
                    <connections>
                        <outlet property="albumLabel" destination="tH3-2R-I2M" id="OI4-jH-Z3V"/>
...
            <objects>
                <splitViewController id="SYz-Tk-T7Y" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Numbers" image="numbers" selectedImage="numbers" id="bKH-YC-PPU"/>
                    <connections>
                        <segue destination="c4H-EN-1NG" kind="relationship" relationship="masterViewController" id="IB7-fr-iY2"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Themes" id="WtM-7g-hhn"/>
                    <connections>
                        <outlet property="errorView" destination="dGL-Pi-N75" id="113-4l-poG"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Harry Potter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IEo-v7-FDI">
                                                    <rect key="frame" x="15" y="25" width="70" height="15"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Serskamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7yf-ra-X8w">
                                                    <rect key="frame" x="15" y="25" width="56" height="15"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Stores" id="dNO-Pf-UOw"/>
                    <connections>
                        <outlet property="errorView" destination="Ex8-tq-acw" id="wJn-2Y-Ho5"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Albums" id="fjy-fb-YOL"/>
                    <connections>
                        <outlet property="errorView" destination="mA4-VB-Ukh" id="28G-JJ-L9y"/>
...
